fix logo and nav spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -572,7 +572,7 @@ input:-ms-input-placeholder {
 .navbar-default {
     background-color:transparent;
     border:transparent;
-    padding-top: 70px;
+    padding-top: 25px;
 }
 
 .navbar {
